force-app/main/default/objects/QA_Join_Scoring_Table__mdt/QA_Join_Scoring_Table__mdt.object-meta.xml
<CustomObject>
    <description>The metadata contains the scoring table that will be used to calculate the overall scoring for a Join QA.</description>
    <label>QA Join Scoring Table</label>
    <pluralLabel>QA Join Scoring Table</pluralLabel>
</CustomObject>