force-app/main/default/objects/QA_Join_Scoring_Table__mdt/fields/CX_Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>CX_Criteria_Field__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The field in CX Criteria section for which scoring has to be calculated.</description>
    <label>CX Criteria Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Join_Actions_Taken__c</fullName>
            </value>
            <value>
                <fullName>Join_Case_Data_Field_Accuracy__c</fullName>
            </value>
            <value>
                <fullName>Join_Case_Record_Accuracy__c</fullName>
            </value>
            <value>
                <fullName>Join_Financial_Operation_Accuracy__c</fullName>
            </value>
            <value>
                <fullName>Join_Overall_Decision_Supported__c</fullName>
            </value>
            <value>
                <fullName>Join_Blocks_Applied_where_Appropriate__c</fullName>
            </value>
            <value>
                <fullName>Join_Customer_Welcoming__c</fullName>
            </value>
            <value>
                <fullName>Join_Customer_Interested__c</fullName>
            </value>
            <value>
                <fullName>Join_Customer_Caring__c</fullName>
            </value>
            <value>
                <fullName>Join_Customer_Accountable__c</fullName>
            </value>
            <value>
                <fullName>Join_Customer_Respect__c</fullName>
            </value>
            <value>
                <fullName>Join_Business_Actions_Taken__c</fullName>
            </value>
            <value>
                <fullName>Join_Business_Case_Record__c</fullName>
            </value>
            <value>
                <fullName>Join_Business_Information__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>