force-app/main/default/objects/QA_Join_Scoring_Table__mdt/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The evaluation type of the QA record.</description>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud &amp; Dispute</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Identity &amp; KYC</fullName>
            </value>
            <value>
                <fullName>Interaction QI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>