force-app/main/default/objects/QA_Join_Scoring_Table__mdt/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The rating chosen on the CX criteria field.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effective</fullName>
                <default>true</default>
                <label>Effective</label>
            </value>
            <value>
                <fullName>Almost There</fullName>
            </value>
            <value>
                <fullName>Not Quite There</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>