force-app/main/default/objects/QA_Join_Scoring_Table__mdt/listViews/view_all.listView-meta.xml
<ListView>
    <fullName>view_all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Evaluation_Type__c</columns>
    <columns>CX_Criteria_Field__c</columns>
    <columns>Rating__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>view all</label>
</ListView>